- ufs_balloc_range(): on error, only PG_RELEASED the pages that were   allocated to extend the file to the new size. Releasing all pages   may release pages that contains previously-written data not yet flushed   to disk. Should fix PR kern/35704 - {ffs,lfs,ext2fs}_truncate(): Even if the inode's size is the same as   the new length, call uvm_vnp_setsize(). *_truncate() may have been   called by *_write() in the error path (e.g. block allocation failure   because of quota of file system full), and at this point v_writesize   has been set to the desired size of the file and not reverted to the   old size. Not adjusting v_writesize to the real size cause   genfs_do_io() to write to disk past the real end of the file.